adição de membros nos projetos e remoção de bugs
