# src/routes/User.js
@@ -5,34 +5,6 @@ const express = require('express');
 
 const router = express.Router();
 
-
-
-router.get('/:status', verifyJWT, async (req, res) => {
-    try {
-        const result = await userService.getUsers({
-            ...req.params, token: req.token });
-        res.status(200).json(result);
-    } catch (err) {
-        console.log(err);
-        (err.code) ?
-            res.status(500).json({ message: "Server Internal Error." }) :
-            res.status(500).json({ message: err.message });
-    }
-})
-
-router.get('/', verifyJWT, async (req, res) => {
-    try {
-        const result = await userService.getById({
-            id: req.userId, token: req.token });
-        res.status(200).json(result);
-    } catch (err) {
-        console.log(err);
-        (err.code) ?
-            res.status(500).json({ message: "Server Internal Error." }) :
-            res.status(500).json({ message: err.message });
-    }
-})
-
 router.put('/', verifyJWT, async (req, res) => {
     try {
         const result = await userService.update({
@@ -46,7 +18,33 @@ router.put('/', verifyJWT, async (req, res) => {
     }
 })
 
-router.delete('/:id/', verifyJWT, async (req, res) => {
+router.get('/all/:status?', verifyJWT, async (req, res) => {
+    try {
+        const result = await userService.getUsers({
+            ...req.params, token: req.token });
+        res.status(200).json(result);
+    } catch (err) {
+        console.log(err);
+        (err.code) ?
+            res.status(500).json({ message: "Server Internal Error." }) :
+            res.status(500).json({ message: err.message });
+    }
+})
+
+router.get('/:id?', verifyJWT, async (req, res) => {
+    try {
+        const result = await userService.getById({
+            ...req.params, token: req.token, idInToken: req.userId });
+        res.status(200).json(result);
+    } catch (err) {
+        console.log(err);
+        (err.code) ?
+            res.status(500).json({ message: "Server Internal Error." }) :
+            res.status(500).json({ message: err.message });
+    }
+})
+
+router.delete('/:id', verifyJWT, async (req, res) => {
     try {
         const result = await userService.deleteById({
             ...req.params, token: req.token });
